Geometry nodes drag and drop creates a duplicate node #86894

Closed
opened 2021-03-24 13:55:26 +01:00 by Hans Goudey · 6 comments
Member

System Information
Operating system:
Graphics card:

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-18 21:29, hash: 36deb8a48e
Worked: Never

Short description of error
Drag and Drop at an existing Object Info node would overwrite the existing one's object, but also create a new node:
Drag and Drop Bug 2.mp4

Exact steps for others to reproduce the error
Drag the camera object and drop it at the light object info's name input field, see how it overwrites it while creating a new node

**System Information** Operating system: Graphics card: **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-18 21:29, hash: `36deb8a48e` Worked: Never **Short description of error** Drag and Drop at an existing Object Info node would overwrite the existing one's object, but also create a new node: [Drag and Drop Bug 2.mp4](https://archive.blender.org/developer/F9898821/Drag_and_Drop_Bug_2.mp4) **Exact steps for others to reproduce the error** Drag the camera object and drop it at the light object info's name input field, see how it overwrites it while creating a new node
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Charlie Jolly was assigned by Hans Goudey 2021-03-24 13:56:44 +01:00
Author
Member

I split this task from #86722, which was two bugs in one.

I split this task from #86722, which was two bugs in one.

This issue was referenced by 337a122e44

This issue was referenced by 337a122e44a3f6b28b8118c9fc4f06e397885c13

This issue was referenced by ce359da5b3

This issue was referenced by ce359da5b3ac98c9f7cfd6593cc1769ec3b7247b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86894
No description provided.